force-app/main/default/objects/County__c/County__c.object-meta.xml
<CustomObject>
    <description>To keep the county name. It is not unique. The same county name can exist for different states.</description>
    <label>County</label>
    <nameField>
        <displayFormat>CN-{000}</displayFormat>
        <label>County Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Counties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>