force-app/main/default/objects/County__c/fields/County_Name__c.field-meta.xml
<CustomField>
    <fullName>County_Name__c</fullName>
    <description>It holds counties name.</description>
    <label>County Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>