force-app/main/default/objects/County__c/fields/County_state__c.field-meta.xml
<CustomField>
    <fullName>County_state__c</fullName>
    <description>Combination of County+&quot;:&quot;+state.</description>
    <externalId>true</externalId>
    <label>CountyState</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>