force-app/main/default/objects/County__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>To hold the state of the branch</description>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>