force-app/main/default/objects/County__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>County_Name__c</columns>
    <columns>State__c</columns>
    <columns>County_state__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>